fix: Improve Browser Startup and Error Handling
- Add `--no-sandbox` flag to resolve browser startup issues
- Enhance error handling in temp email creation
- Update localization files with new email-related messages
- Improve translation support for email creation process

--- a/locales/en.json
+++ b/locales/en.json
@@ -224,7 +224,8 @@
         "blocked_domains_loaded_timeout": "Blocked Domains Loaded Timeout: {timeout}s",
         "blocked_domains_loaded_timeout_error": "Blocked Domains Loaded Timeout Error: {error}",
         "available_domains_loaded": "Available Domains Loaded: {count}",
-        "domains_filtered": "Domains Filtered: {count}"
+        "domains_filtered": "Domains Filtered: {count}",
+        "trying_to_create_email": "Trying to create email: {email}"
     },
     "update": {
         "title": "Disable Cursor Auto Update",
