--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -221,7 +221,8 @@
         "blocked_domains_loaded_timeout": "加载被屏蔽的域名超时: {timeout}秒",
         "blocked_domains_loaded_timeout_error": "加载被屏蔽的域名超时错误: {error}",
         "available_domains_loaded": "获取到 {count} 个可用域名",
-        "domains_filtered": "过滤后剩餘 {count} 個可用域名"
+        "domains_filtered": "过滤后剩餘 {count} 個可用域名",
+        "trying_to_create_email": "尝试创建邮箱: {email}"
     },
     "update": {
         "title": "禁用 Cursor 自动更新",
