feat: Implement Configuration Management and Enhance Browser Setup
- Add `setup_config` function to manage configuration file across platforms
- Extract configuration-related code from `setup_driver` into a separate function
- Implement dynamic Chrome path detection for Windows, macOS, and Linux
- Add configurable Turnstile verification settings
- Update README.md with configuration file details
- Enhance localization support for configuration-related messages
- Improve code maintainability and platform compatibility

--- a/locales/en.json
+++ b/locales/en.json
@@ -136,7 +136,12 @@
         "first_name": "First Name",
         "last_name": "Last Name",
         "exit_signal": "Exit Signal",
-        "email_address": "Email Address"
+        "email_address": "Email Address",
+        "config_created": "Config Created",
+        "verification_failed": "Verification Failed",
+        "verification_error": "Verification Error: {error}",
+        "config_option_added": "Config Option Added: {option}",
+        "config_updated": "Config Updated"
     },
     "auth": {
         "title": "Cursor Auth Manager",
