--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -68,7 +68,11 @@
         "version_less_than_0_45": "Cursor版本 < 0.45.0，跳过getMachineId修补",
         "detecting_version": "检测Cursor版本",
         "patching_getmachineid": "修补getMachineId",
-        "version_greater_than_0_45": "Cursor版本 >= 0.45.0，修补getMachineId"
+        "version_greater_than_0_45": "Cursor版本 >= 0.45.0，修补getMachineId",
+        "permission_denied": "权限拒绝: {error}",
+        "backup_created": "备份已创建",
+        "update_success": "更新成功",
+        "update_failed": "更新失败: {error}"
     },
     "register": {
         "title": "Cursor 注册工具",
@@ -141,7 +145,9 @@
         "verification_failed": "验证失败",
         "verification_error": "验证错误: {error}",
         "config_option_added": "配置项已添加: {option}",
-        "config_updated": "配置已更新"
+        "config_updated": "配置已更新",
+        "password_submitted": "密码已提交",
+        "total_usage": "总使用量: {usage}"
     },
     "auth": {
         "title": "Cursor 认证管理器",
