--- a/locales/zh_tw.json
+++ b/locales/zh_tw.json
@@ -68,7 +68,11 @@
         "version_less_than_0_45": "Cursor版本 < 0.45.0，跳过getMachineId修补",
         "detecting_version": "檢測Cursor版本",
         "patching_getmachineid": "修補getMachineId",
-        "version_greater_than_0_45": "Cursor版本 >= 0.45.0，修補getMachineId"
+        "version_greater_than_0_45": "Cursor版本 >= 0.45.0，修補getMachineId",
+        "permission_denied": "權限拒絕: {error}",
+        "backup_created": "備份已創建",
+        "update_success": "更新成功",
+        "update_failed": "更新失敗: {error}"
     },
     "register": {
         "title": "Cursor 註冊工具",
@@ -122,7 +126,9 @@
         "verification_failed": "驗證失敗",
         "verification_error": "驗證錯誤: {error}",
         "config_option_added": "配置項已添加: {option}",
-        "config_updated": "配置已更新"
+        "config_updated": "配置已更新",
+        "password_submitted": "密碼已提交",
+        "total_usage": "總使用量: {usage}"
     },
     "auth": {
         "title": "Cursor 認證管理器",
