--- a/locales/en.json
+++ b/locales/en.json
@@ -160,7 +160,9 @@
         "config_option_added": "Config Option Added: {option}",
         "config_updated": "Config Updated",
         "password_submitted": "Password Submitted",
-        "total_usage": "Total Usage: {usage}"
+        "total_usage": "Total Usage: {usage}",
+        "setting_on_password": "Setting Password",
+        "getting_code": "Getting Verification Code, Will Try in 60s"
     },
     "auth": {
         "title": "Cursor Auth Manager",
@@ -270,6 +272,9 @@
         "updating": "Updating to the latest version. The program will restart automatically.",
         "up_to_date": "You are using the latest version.",
         "check_failed": "Failed to check for updates: {error}",
-        "continue_anyway": "Continuing with current version..."
+        "continue_anyway": "Continuing with current version...",
+        "update_confirm": "Do you want to update to the latest version? (Y/n)",
+        "update_skipped": "Skipping update.",
+        "invalid_choice": "Invalid choice. Please enter 'Y' or 'n'."
     }
 }
