--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -159,7 +159,9 @@
         "config_option_added": "配置项已添加: {option}",
         "config_updated": "配置已更新",
         "password_submitted": "密码已提交",
-        "total_usage": "总使用量: {usage}"
+        "total_usage": "总使用量: {usage}",
+        "setting_on_password": "设置密码",
+        "getting_code": "获取验证码，将在60秒内尝试..."
     },
     "auth": {
         "title": "Cursor 认证管理器",
@@ -266,6 +268,9 @@
         "updating": "正在更新到最新版本。程序将自动重启。",
         "up_to_date": "您使用的是最新版本。",
         "check_failed": "检查更新失败: {error}",
-        "continue_anyway": "继续使用当前版本..."
+        "continue_anyway": "继续使用当前版本...",
+        "update_confirm": "是否要更新到最新版本? (Y/n)",
+        "update_skipped": "跳过更新。",
+        "invalid_choice": "选择无效。请输入 'Y' 或 'n'."
     }
 } 
