Remove Vietnamese Language Option from Chinese Localization Files
- Updated zh_cn.json and zh_tw.json to remove the Vietnamese language entry while retaining other language options.

--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -17,8 +17,7 @@
     "languages": {
         "en": "English",
         "zh_cn": "简体中文",
-        "zh_tw": "繁體中文",
-        "vi": "越南语"
+        "zh_tw": "繁體中文"
     },
     "quit_cursor": {
         "start": "开始退出 Cursor",
