--- a/locales/zh_tw.json
+++ b/locales/zh_tw.json
@@ -17,8 +17,7 @@
     "languages": {
         "en": "English",
         "zh_cn": "简体中文",
-        "zh_tw": "繁體中文",
-        "vi": "越南語"
+        "zh_tw": "繁體中文"
     },
     "quit_cursor": {
         "start": "開始退出 Cursor",
