--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -17,7 +17,8 @@
     "languages": {
         "en": "English",
         "zh_cn": "简体中文",
-        "zh_tw": "繁體中文"
+        "zh_tw": "繁體中文",
+        "vi": "Vietnamese"
     },
     "quit_cursor": {
         "start": "开始退出 Cursor",
