feat: Add Google and GitHub OAuth Authentication with Lifetime Access - Add OAuth integrations, update menu system, add multi-language support, and update documentation

--- a/locales/en.json
+++ b/locales/en.json
@@ -4,6 +4,8 @@
         "exit": "Exit Program",
         "reset": "Reset Machine ID",
         "register": "Register New Cursor Account",
+        "register_google": "Register with Google Account",
+        "register_github": "Register with GitHub Account",
         "register_manual": "Register Cursor with Custom Email",
         "quit": "Close Cursor Application",
         "select_language": "Change Language",
