--- a/locales/vi.json
+++ b/locales/vi.json
@@ -12,7 +12,8 @@
         "program_terminated": "Chương trình đã bị người dùng chấm dứt",
         "error_occurred": "Đã xảy ra lỗi: {error}. Vui lòng thử lại",
         "press_enter": "Nhấn Enter để Thoát",
-        "disable_auto_update": "Tắt Tự Động Cập Nhật Cursor"
+        "disable_auto_update": "Tắt Tự Động Cập Nhật Cursor",
+        "lifetime_access_enabled": "LIFETIME ACCESS ENABLED"
     },
     "languages": {
         "en": "English",
@@ -276,6 +277,7 @@
         "continue_anyway": "Tiếp Tục Với Phiên Bản Hiện Tại...",
         "update_confirm": "Bạn Có Muốn Cập Nhật Lên Phiên Bản Mới Nhất Không? (Y/n)",
         "update_skipped": "Bỏ Qua Cập Nhật.",
-        "invalid_choice": "Lựa Chọn Không Hợp Lệ. Vui Lòng Nhập 'Y' Hoặc 'n'."
+        "invalid_choice": "Lựa Chọn Không Hợp Lệ. Vui Lòng Nhập 'Y' Hoặc 'n'.",
+        "development_version": "Phiên Bản Phát Triển {current} > {latest}"
     }
 }
