--- a/locales/zh_tw.json
+++ b/locales/zh_tw.json
@@ -12,8 +12,9 @@
         "program_terminated": "程式已被使用者終止",
         "error_occurred": "發生錯誤：{error}，請重試",
         "press_enter": "按返回鍵退出",
-        "disable_auto_update": "停用 Cursor 自動更新",
-        "lifetime_access_enabled": "永久訂閱"
+        "disable_auto_update": "禁用 Cursor 自動更新",
+        "lifetime_access_enabled": "終身訪問已啟用",
+        "totally_reset": "完全重置 Cursor"
     },
     "languages": {
         "en": "English",
