Update version to 1.7.10 and enhance totally_reset_cursor.py with multi-language support and new features. Update CHANGELOG.md to reflect changes.

--- a/locales/en.json
+++ b/locales/en.json
@@ -282,5 +282,96 @@
         "update_skipped": "Skipping update.",
         "invalid_choice": "Invalid choice. Please enter 'Y' or 'n'.",
         "development_version": "Development Version {current} > {latest}"
+    },
+    "totally_reset": {
+        "title": "Totally Reset Cursor",
+        "checking_config": "Checking Config File",
+        "config_not_found": "Config File Not Found",
+        "no_permission": "Cannot Read or Write Config File, Please Check File Permissions",
+        "reading_config": "Reading Current Config",
+        "creating_backup": "Creating Config Backup",
+        "backup_exists": "Backup File Already Exists, Skipping Backup Step",
+        "generating_new_machine_id": "Generating New Machine ID",
+        "saving_new_config": "Saving New Config to JSON",
+        "success": "Cursor Reset Successfully",
+        "error": "Cursor Reset Failed: {error}",
+        "press_enter": "Press Enter to Exit",
+        "reset_machine_id": "Reset Machine ID",
+        "database_connection_closed": "Database Connection Closed",
+        "database_updated_successfully": "Database Updated Successfully",
+        "connected_to_database": "Connected to Database",
+        "updating_pair": "Updating Key-Value Pair",
+        "db_not_found": "Database file not found at: {path}",
+        "db_permission_error": "Cannot access database file. Please check permissions",
+        "db_connection_error": "Failed to connect to database: {error}",
+        "feature_title": "FEATURES",
+        "feature_1": "Complete removal of Cursor AI settings and configurations",
+        "feature_2": "Clears all cached data including AI history and prompts",
+        "feature_3": "Resets machine ID to bypass trial detection",
+        "feature_4": "Creates new randomized machine identifiers",
+        "feature_5": "Removes custom extensions and preferences",
+        "feature_6": "Resets trial information and activation data",
+        "feature_7": "Deep scan for hidden license and trial-related files",
+        "feature_8": "Safely preserves non-Cursor files and applications",
+        "feature_9": "Compatible with Windows, macOS, and Linux",
+        "disclaimer_title": "DISCLAIMER",
+        "disclaimer_1": "This tool will permanently delete all Cursor AI settings,",
+        "disclaimer_2": "configurations, and cached data. This action cannot be undone.",
+        "disclaimer_3": "Your code files will NOT be affected, and the tool is designed",
+        "disclaimer_4": "to only target Cursor AI editor files and trial detection mechanisms.",
+        "disclaimer_5": "Other applications on your system will not be affected.",
+        "disclaimer_6": "You will need to set up Cursor AI again after running this tool.",
+        "disclaimer_7": "Use at your own risk",
+        "confirm_title": "Are you sure you want to proceed?",
+        "confirm_1": "This action will delete all Cursor AI settings,",
+        "confirm_2": "configurations, and cached data. This action cannot be undone.",
+        "confirm_3": "Your code files will NOT be affected, and the tool is designed",
+        "confirm_4": "to only target Cursor AI editor files and trial detection mechanisms.",
+        "confirm_5": "Other applications on your system will not be affected.",
+        "confirm_6": "You will need to set up Cursor AI again after running this tool.",
+        "confirm_7": "Use at your own risk",
+        "invalid_choice": "Please enter 'Y' or 'n'",
+        "skipped_for_safety": "Skipped for safety (not Cursor-related): {path}",
+        "deleted": "Deleted: {path}",
+        "error_deleting": "Error deleting {path}: {error}",
+        "not_found": "File not found: {path}",
+        "resetting_machine_id": "Resetting machine identifiers to bypass trial detection...",
+        "created_machine_id": "Created new machine ID: {path}",
+        "error_creating_machine_id": "Error creating machine ID file {path}: {error}",
+        "error_searching": "Error searching for files in {path}: {error}",
+        "created_extended_trial_info": "Created new extended trial info: {path}",
+        "error_creating_trial_info": "Error creating trial info file {path}: {error}",
+        "resetting_cursor_ai_editor": "Resetting Cursor AI Editor... Please wait.",
+        "reset_cancelled": "Reset cancelled. Exiting without making any changes.",
+        "windows_machine_id_modification_skipped": "Windows machine ID modification skipped: {error}",
+        "linux_machine_id_modification_skipped": "Linux machine-id modification skipped: {error}",
+        "note_complete_machine_id_reset_may_require_running_as_administrator": "Note: Complete machine ID reset may require running as administrator",
+        "note_complete_system_machine_id_reset_may_require_sudo_privileges": "Note: Complete system machine-id reset may require sudo privileges",
+        "windows_registry_instructions": "📝 NOTE: For complete reset on Windows, you might also need to clean registry entries.",
+        "windows_registry_instructions_2": "   Run 'regedit' and search for keys containing 'Cursor' or 'CursorAI' under HKEY_CURRENT_USER\\Software\\ and delete them.\n",
+        "reset_log_1": "Cursor AI has been fully reset and trial detection bypassed!",
+        "reset_log_2": "Please restart your system for changes to take effect.",
+        "reset_log_3": "You will need to reinstall Cursor AI and should now have a fresh trial period.",
+        "reset_log_4": "For best results, consider also:",
+        "reset_log_5": "Use a different email address when registering for a new trial",
+        "reset_log_6": "If available, use a VPN to change your IP address",
+        "reset_log_7": "Clear your browser cookies and cache before visiting Cursor AI's website",
+        "reset_log_8": "If issues persist, try installing Cursor AI in a different location",
+        "reset_log_9": "If you encounter any issues, go to Github Issue Tracker and create an issue at https://github.com/yeongpin/cursor-free-vip/issues",
+        "unexpected_error": "An unexpected error occurred: {error}",
+        "report_issue": "Please report this issue to Github Issue Tracker at https://github.com/yeongpin/cursor-free-vip/issues",
+        "keyboard_interrupt": "Process interrupted by user. Exiting...",
+        "return_to_main_menu": "Returning to main menu...",
+        "process_interrupted": "Process interrupted. Exiting...",
+        "press_enter_to_return_to_main_menu": "Press Enter to return to main menu...",
+        "removing_known": "Removing known trial/license files",
+        "performing_deep_scan": "Performing deep scan for additional trial/license files",
+        "found_additional_potential_license_trial_files": "Found {count} additional potential license/trial files",
+        "checking_for_electron_localstorage_files": "Checking for Electron localStorage files",
+        "no_additional_license_trial_files_found_in_deep_scan": "No additional license/trial files found in deep scan",
+        "removing_electron_localstorage_files": "Removing Electron localStorage files",
+        "electron_localstorage_files_removed": "Electron localStorage files removed",
+        "electron_localstorage_files_removal_error": "Error removing Electron localStorage files: {error}",
+        "removing_electron_localstorage_files_completed": "Electron localStorage files removal completed"
     }
 }
