--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -278,5 +278,96 @@
         "update_skipped": "跳过更新。",
         "invalid_choice": "选择无效。请输入 'Y' 或 'n'.",
         "development_version": "开发版本 {current} > {latest}"
+    },
+    "totally_reset": {
+        "title": "完全重置 Cursor",
+        "checking_config": "正在检查配置文件",
+        "config_not_found": "未找到配置文件",
+        "no_permission": "无法读取或写入配置文件，请检查文件权限",
+        "reading_config": "正在读取当前配置",
+        "creating_backup": "正在创建配置备份",
+        "backup_exists": "备份文件已存在，跳过备份步骤",
+        "generating_new_machine_id": "正在生成新的机器 ID",
+        "saving_new_config": "正在将新配置保存为 JSON",
+        "success": "Cursor 重置成功",
+        "error": "Cursor 重置失败：{error}",
+        "press_enter": "按回车键退出",
+        "reset_machine_id": "重置机器 ID",
+        "database_connection_closed": "数据库连接已关闭",
+        "database_updated_successfully": "数据库更新成功",
+        "connected_to_database": "已连接到数据库",
+        "updating_pair": "正在更新键值对",
+        "db_not_found": "未找到数据库文件，路径：{path}",
+        "db_permission_error": "无法访问数据库文件，请检查权限",
+        "db_connection_error": "连接数据库失败：{error}",
+        "feature_title": "功能介绍",
+        "feature_1": "完全移除 Cursor AI 设置和配置",
+        "feature_2": "清除所有缓存数据，包括 AI 历史记录和提示",
+        "feature_3": "重置机器 ID 以绕过试用检测",
+        "feature_4": "创建新的随机机器标识符",
+        "feature_5": "移除自定义扩展和偏好设置",
+        "feature_6": "重置试用信息和激活数据",
+        "feature_7": "深度扫描隐藏的授权和试用相关文件",
+        "feature_8": "安全保留非 Cursor 文件和应用程序",
+        "feature_9": "兼容 Windows、macOS 和 Linux",
+        "disclaimer_title": "免责声明",
+        "disclaimer_1": "该工具将永久删除所有 Cursor AI 设置、",
+        "disclaimer_2": "配置和缓存数据。此操作无法撤销。",
+        "disclaimer_3": "您的代码文件 **不会** 受到影响，工具设计为",
+        "disclaimer_4": "仅针对 Cursor AI 编辑器文件和试用检测机制。",
+        "disclaimer_5": "系统中的其他应用程序不会受到影响。",
+        "disclaimer_6": "运行此工具后，您需要重新设置 Cursor AI。",
+        "disclaimer_7": "请自行承担风险",
+        "confirm_title": "您确定要继续吗？",
+        "confirm_1": "该操作将删除所有 Cursor AI 设置、",
+        "confirm_2": "配置和缓存数据。此操作无法撤销。",
+        "confirm_3": "您的代码文件 **不会** 受到影响，工具设计为",
+        "confirm_4": "仅针对 Cursor AI 编辑器文件和试用检测机制。",
+        "confirm_5": "系统中的其他应用程序不会受到影响。",
+        "confirm_6": "运行此工具后，您需要重新设置 Cursor AI。",
+        "confirm_7": "请自行承担风险",
+        "invalid_choice": "请输入 'Y' 或 'n'",
+        "skipped_for_safety": "出于安全原因跳过（非 Cursor 相关）：{path}",
+        "deleted": "已删除：{path}",
+        "error_deleting": "删除 {path} 时出错：{error}",
+        "not_found": "未找到文件：{path}",
+        "resetting_machine_id": "正在重置机器 ID 以绕过试用检测...",
+        "created_machine_id": "已创建新的机器 ID：{path}",
+        "error_creating_machine_id": "创建机器 ID 文件 {path} 时出错：{error}",
+        "error_searching": "在 {path} 搜索文件时出错：{error}",
+        "created_extended_trial_info": "已创建新的扩展试用信息：{path}",
+        "error_creating_trial_info": "创建试用信息文件 {path} 时出错：{error}",
+        "resetting_cursor_ai_editor": "正在重置 Cursor AI 编辑器... 请稍候。",
+        "reset_cancelled": "重置已取消，未进行任何更改。",
+        "windows_machine_id_modification_skipped": "跳过 Windows 机器 ID 修改：{error}",
+        "linux_machine_id_modification_skipped": "跳过 Linux machine-id 修改：{error}",
+        "note_complete_machine_id_reset_may_require_running_as_administrator": "注意：完整的机器 ID 重置可能需要以管理员身份运行",
+        "note_complete_system_machine_id_reset_may_require_sudo_privileges": "注意：完整的系统 machine-id 重置可能需要 sudo 权限",
+        "windows_registry_instructions": "📝 注意：在 Windows 上进行完整重置，您可能还需要清理注册表项。",
+        "windows_registry_instructions_2": "   运行 'regedit' 并搜索 HKEY_CURRENT_USER\\Software\\ 下包含 'Cursor' 或 'CursorAI' 的键并删除它们。\n",
+        "reset_log_1": "Cursor AI 已完全重置并绕过试用检测！",
+        "reset_log_2": "请重启系统以使更改生效。",
+        "reset_log_3": "您需要重新安装 Cursor AI，现在应该有一个新的试用期。",
+        "reset_log_4": "为了获得最佳效果，建议还可以：",
+        "reset_log_5": "注册新试用时使用不同的邮箱地址",
+        "reset_log_6": "如果可能，使用 VPN 更改 IP 地址",
+        "reset_log_7": "访问 Cursor AI 网站前清除浏览器的 Cookie 和缓存",
+        "reset_log_8": "如果仍有问题，尝试将 Cursor AI 安装到不同位置",
+        "reset_log_9": "如遇到任何问题，请到 Github Issue Tracker 提交问题：https://github.com/yeongpin/cursor-free-vip/issues",
+        "unexpected_error": "发生意外错误：{error}",
+        "report_issue": "请在 Github Issue Tracker 报告此问题：https://github.com/yeongpin/cursor-free-vip/issues",
+        "keyboard_interrupt": "用户中断进程，正在退出...",
+        "return_to_main_menu": "返回主菜单...",
+        "process_interrupted": "进程已中断，正在退出...",
+        "press_enter_to_return_to_main_menu": "按回车键返回主菜单...",
+        "removing_known": "正在移除已知的试用/授权文件",
+        "performing_deep_scan": "正在进行深度扫描以查找其他试用/授权文件",
+        "found_additional_potential_license_trial_files": "发现 {count} 个其他潜在的试用/授权文件",
+        "checking_for_electron_localstorage_files": "正在检查 Electron localStorage 文件",
+        "no_additional_license_trial_files_found_in_deep_scan": "深度扫描中未发现其他试用/授权文件",
+        "removing_electron_localstorage_files": "正在移除 Electron localStorage 文件",
+        "electron_localstorage_files_removed": "Electron localStorage 文件已移除",
+        "electron_localstorage_files_removal_error": "移除 Electron localStorage 文件时出错：{error}",
+        "removing_electron_localstorage_files_completed": "Electron localStorage 文件移除完成"
     }
 } 
